--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -196,10 +196,23 @@
                 <!-- Sidebar -->
                 <t t-call="portal.portal_record_sidebar">
                     <t t-set="classes" t-value="'col-lg-auto d-print-none'" />
-
                     <t t-set="title">
-                        <h2 class="mb-0"><b t-field="folio.amount_total" /> </h2>
+                        <h2 class="mb-0">
+                            <b
+                                t-if="folio.pending_amount > 0"
+                                t-field="folio.pending_amount"
+                            />
+                            <b t-else="1" t-field="folio.amount_total" />
+                        </h2>
+                        <div
+                            class="small"
+                            t-if="folio.payment_state not in ('paid', 'in_payment')"
+                        ><i class="fa fa-clock-o" /><span
+                                class="o_portal_sidebar_timeago ml4"
+                                t-att-datetime="folio.last_checkout"
+                            /></div>
                     </t>
+
                     <t t-set="entries">
                         <ul
                             class="list-group list-group-flush flex-wrap flex-row flex-lg-column"
@@ -241,7 +254,6 @@
                                         /> Guests to Precheckin
                                     </a>
                                 </div>
-
                             </li>
 
                             <li
@@ -284,7 +296,7 @@
                 </t>
                 <!-- main content-->
                 <div id="folio_content" class="col-12 col-lg">
-                    <t t-if="error or warning" t-call="pms.folio_invoice_error" />
+                    <t t-if="error or warning" t-call="pms.portal_folio_error" />
                     <t
                         t-if="success and (not error and not warning)"
                         t-call="pms.portal_folio_success"
@@ -296,18 +308,21 @@
                                 class="fa fa-circle-o-notch fa-spin fa-2x fa-fw text-black-50"
                             />
                         </div>
+                        <!-- TODO: real values: height="100%" and scrolling="no",
+                            temp -> fixed height, review why dont launch
+                            autoresize FolioPortalSidebar.js-->
                         <iframe
                             id="folio_html"
                             class="mt8 mb8"
                             width="100%"
-                            height="100%"
+                            height="800px"
                             frameborder="0"
-                            scrolling="no"
+                            scrolling="yes"
                             t-att-src="folio.get_portal_url(report_type='html')"
                         />
                     </div>
                     <!-- chatter -->
-                    <div id="folio_communication" class="mt-4">
+                    <div id="invoice_communication" class="mt-4">
                         <h2>History</h2>
                         <t t-call="portal.message_thread">
                             <t t-set="object" t-value="folio" />
@@ -318,7 +333,7 @@
         </xpath>
     </template>
 
-    <template id="folio_invoice_error" name="Folio error/warning display">
+    <template id="portal_folio_error" name="Folio error/warning display">
         <div class="row mr16">
             <div
                 t-attf-class="'col-lg-12 mr16 ml16 alert alert-dismissable' #{'alert-danger' if error else 'alert-warning'}"
