[IMP]pms: unique board_service_room_type by property

--- a/pms/wizards/pms_booking_engine_views.xml
+++ b/pms/wizards/pms_booking_engine_views.xml
@@ -84,6 +84,7 @@
                                     decoration-primary="value_num_rooms_selected &gt; 0"
                                     decoration-bf="value_num_rooms_selected &gt; 0"
                                 >
+                                    <field name="pms_property_id" invisible="1" />
                                      <field
                                         name="room_type_id"
                                         readonly="1"
