--- a/pms/views/pms_board_service_room_type_views.xml
+++ b/pms/views/pms_board_service_room_type_views.xml
@@ -8,7 +8,7 @@
                 <group>
                     <field name="amount" />
                     <field name="board_service_line_ids">
-                    <field name="pms_property_ids" invisible="1" />
+                    <field name="pms_property_id" />
                         <tree editable="bottom">
                             <field
                                 name="pms_board_service_room_type_id"
@@ -16,7 +16,7 @@
                             />
                             <field name="product_id" />
                             <field name="amount" />
-                            <field name="pms_property_ids" invisible="1" />
+                            <field name="pms_property_id" invisible="1" />
                         </tree>
                     </field>
                 </group>
