--- a/pms/views/pms_room_type_views.xml
+++ b/pms/views/pms_room_type_views.xml
@@ -66,7 +66,7 @@
                                     <field name="pms_room_type_id" invisible="1" />
                                     <field name="pms_board_service_id" />
                                     <field name="amount" />
-                                    <field name="pms_property_ids" invisible="1" />
+                                    <field name="pms_property_id" />
                                     <button
                                         type="object"
                                         class="oe_stat_button"
