[IMP]pms: action pms menu invoices, out_refund included

--- a/pms/views/account_move_views.xml
+++ b/pms/views/account_move_views.xml
@@ -98,10 +98,27 @@
         </field>
     </record>
 
+    <record id="action_pms_move_out_invoice_type" model="ir.actions.act_window">
+        <field name="name">PMS Invoices</field>
+        <field name="res_model">account.move</field>
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="view_id" ref="account.view_out_invoice_tree" />
+        <field name="search_view_id" ref="view_account_invoice_filter" />
+        <field name="domain">[('move_type', 'in', ('out_invoice','out_refund')]</field>
+        <field name="context">{'default_move_type': 'out_invoice'}</field>
+        <field name="help" type="html">
+          <p class="o_view_nocontent_smiling_face">
+            Create a customer invoice
+          </p><p>
+            Create invoices, register payments and keep track of the discussions with your customers.
+          </p>
+        </field>
+    </record>
+
     <menuitem
         name="Invoices"
         id="pms_invoice_menu"
-        action="account.action_move_out_invoice_type"
+        action="pms.action_pms_move_out_invoice_type"
         sequence="15"
         parent="pms.pms_sales_menu"
     />
